--- a/appspec.yml
+++ b/appspec.yml
@@ -1,6 +1,6 @@
 version: 0.0
-os     : Windows
-# os     : Linux
+# os     : Windows
+os     : Linux
 files:
-  - source : \
-    distination: C:\inetpub\wwwroot
+  - source : /
+    destination: /var/www/html/
