--- a/appspec.yml
+++ b/appspec.yml
@@ -1,6 +1,6 @@
 version: 0.0
-# os     : Windows
-os     : Linux
+os: linux
+# os: Windows
 files:
   - source : /
-    destination: /var/www/html/
+    destination: /var/www/html
